--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -2,3 +2,5 @@
 <link rel='stylesheet' href='/stylesheets/style.css' />
 <link rel='stylesheet' href='/bootstrap/css/bootstrap.min.css' />
 <link rel='stylesheet' href='/stylesheets/fontawesome-all.css' />
+<link rel='stylesheet' href='/stylesheets/plugins-md.css' />
+<link rel='stylesheet' href='/stylesheets/components-md.css' />
